--- a/secret-invite.html
+++ b/secret-invite.html
@@ -294,7 +294,7 @@ areasEl.addEventListener("change", (e)=>{
   }
 });
 
-/* Utilities */
+/* Utilities to choose area + venue when multiple areas are selected */
 function selectedAreasWithVenues(){
   const saved=getSelectedAreas();
   const hasVenues=saved.filter(a=>(VENUES_BY_AREA[a]||[]).length>0);
@@ -310,7 +310,7 @@ function pickAreaForColor(color){
   const areas=selectedAreasWithVenues();
   if(areas.length===1) return areas[0];
   const colorOffset={blue:0,green:1,red:2}[color]??0;
-  const idx=(weekNumber()+colorOffset) % areas.length;
+  const idx=(weekNumber()+colorOffset) % areas.length; // deterministic by week+color
   return areas[idx];
 }
 function venueFor(areaId, color){
@@ -327,7 +327,7 @@ function formatLongDateTime(dateObj, timeLabel){
 }
 function parseTimeOnDate(dateObj, timeLabel){
   const m = timeLabel.match(/^\s*(\d{1,2}):(\d{2})\s*([AP]M)\s*$/i);
-  let h=19, min=30;
+  let h=19, min=30; // default 7:30 PM
   if(m){
     h = parseInt(m[1],10);
     min = parseInt(m[2],10);
@@ -335,12 +335,11 @@ function parseTimeOnDate(dateObj, timeLabel){
     if(ampm==="PM" && h<12) h+=12;
     if(ampm==="AM" && h===12) h=0;
   }
-  const d = new Date(dateObj.getFullYear(), dateObj.getMonth(), dateObj.getDate(), h, min, 0, 0);
-  return d;
+  return new Date(dateObj.getFullYear(), dateObj.getMonth(), dateObj.getDate(), h, min, 0, 0);
 }
 
 /* ===========================
-   Door frames
+   Door frames (images in /door/)
 =========================== */
 const DOOR_FRAMES = {
   blue: Array.from({length:7},(_,i)=>`door/blue-door-${i+1}.png`),
@@ -362,9 +361,10 @@ const doorBtn={
 doorImg.blue.src=DOOR_CLOSED.blue;
 doorImg.green.src=DOOR_CLOSED.green;
 doorImg.red.src=DOOR_CLOSED.red;
+// Preload frames
 ["blue","green","red"].forEach(c=>DOOR_FRAMES[c].forEach(src=>{const i=new Image();i.src=src;}));
 
-/* Faster animation */
+/* Faster animation: 120ms per frame */
 function playDoorAnimation(color){
   const frames=DOOR_FRAMES[color]; const img=doorImg[color];
   return new Promise(resolve=>{
@@ -375,7 +375,7 @@ function playDoorAnimation(color){
 }
 
 /* ===========================
-   Entitlements
+   Entitlements (client-side “pay once per day”)
 =========================== */
 const ACCESS_KEY="lelibido:entitlements";
 function readAccess(){ try{ return JSON.parse(localStorage.getItem(ACCESS_KEY)||"{}") }catch(e){ return {} } }
@@ -388,7 +388,7 @@ function grantAccess({date, tier, color}){
 function hasAccess({date, color}){ const d=readAccess()[date]; return !!(d && (d.all || (d.colors && d.colors[color]))) }
 
 /* ===========================
-   Stripe Checkout
+   Stripe Checkout via Netlify Function
 =========================== */
 async function startCheckout(tier, color, areaId) {
   const date = todayStr();
@@ -406,14 +406,14 @@ async function startCheckout(tier, color, areaId) {
   }
   const { url } = await resp.json();
   if (url) {
-    location.href = url;
+    location.href = url; // redirect to Stripe Checkout
   } else {
     alert('Checkout session failed.');
   }
 }
 (function handleReturnFromStripe(){
   const params=new URLSearchParams(location.search);
-  const paid=params.get("paid");
+  const paid=params.get("paid"); // "single" | "all"
   const date=params.get("date");
   const color=params.get("color");
   const area =params.get("area") || pickAreaForColor(color||"blue");
@@ -421,13 +421,13 @@ async function startCheckout(tier, color, areaId) {
     grantAccess({date, tier: paid==="all"?"all":"single", color});
     const theme=themeForColor(color||"blue");
     const venue=venueFor(area, color||"blue");
-    history.replaceState({}, "", location.pathname);
+    history.replaceState({}, "", location.pathname); // clean URL
     playDoorAnimation(color||"blue").then(()=> showInvitation({color:color||"blue", venue, theme}));
   }
 })();
 
 /* ===========================
-   Modal / Calendar helpers
+   Modal helpers
 =========================== */
 function roomLabel(color){ return `${color[0].toUpperCase()+color.slice(1)} Room` }
 function makeICS({title, description, locationText, startLocal, durationMinutes=120}){
@@ -481,10 +481,10 @@ function showInvitation({color,venue,theme}){
   const today = new Date();
   const startLabel = venue?.time ?? "7:30 PM";
   const startsText = formatLongDateTime(today, startLabel);
-  const themeLine = theme;
+  const themeLine = theme; // already includes "Title: attire"
   const room = roomLabel(color);
 
-  // Content
+  // Build content
   modalBody.innerHTML=`
     <div class="invite-card">
       <div class="invite-brand">${room}</div>
@@ -502,62 +502,34 @@ function showInvitation({color,venue,theme}){
   `;
   modalBackdrop.classList.add("show");
 
-  // Calendar routing
+  // ===== One-button calendar behavior =====
   const startLocal = parseTimeOnDate(today, startLabel);
   const title = `${room} • ${theme.split(':')[0]}`;
   const description = themeLine;
   const locationText = `${venue?.name ?? ""} — ${venue?.address ?? ""}`;
   const addBtn = document.getElementById("addToCalendarBtn");
 
-  // Robust iOS browser detection (treat Chrome/Brave/Firefox/Edge/DuckDuckGo as non-Safari)
-  const ua = navigator.userAgent;
-  const isIOS = /iPad|iPhone|iPod/.test(ua);
-  const isCriOS = /\bCriOS\b/i.test(ua);        // Chrome on iOS
-  const isFxiOS = /\bFxiOS\b/i.test(ua);        // Firefox on iOS
-  const isEdgiOS = /\bEdgiOS\b/i.test(ua);      // Edge on iOS
-  const isBrave = /\bBrave\b/i.test(ua);        // Brave on iOS
-  const isDuckDuckGo = /\bDuckDuckGo\b/i.test(ua); // DuckDuckGo on iOS
-  const isSafari =
-    isIOS &&
-    /\bSafari\b/i.test(ua) &&
-    !(isCriOS || isFxiOS || isEdgiOS || isBrave || isDuckDuckGo);
+  // Detect iOS (any browser) vs. everything else
+  const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent);
 
-  // Google Calendar URL helper
+  // Build Google Calendar URL (works reliably on all iOS browsers and gives notifications)
   function two(n){ return String(n).padStart(2,'0'); }
   function gcalDate(d){ return `${d.getFullYear()}${two(d.getMonth()+1)}${two(d.getDate())}T${two(d.getHours())}${two(d.getMinutes())}00`; }
   const endLocal = new Date(startLocal.getTime() + 120*60000);
   const datesParam = `${gcalDate(startLocal)}/${gcalDate(endLocal)}`;
   const gcalUrl = `https://calendar.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&details=${encodeURIComponent(description)}&location=${encodeURIComponent(locationText)}&dates=${datesParam}&ctz=America/New_York`;
 
-  if (isIOS && !isSafari) {
-    // iOS non-Safari (Chrome/Brave/Firefox/Edge/DuckDuckGo) → Google Calendar (app or web)
+  if (isIOS) {
+    // Single-button behavior on iOS: always use Google Calendar link
     addBtn.setAttribute("href", gcalUrl);
     addBtn.setAttribute("target", "_blank");
     addBtn.removeAttribute("download");
-
-    const note = document.createElement('div');
-    note.className = 'tiny';
-    note.textContent = 'Using Apple Calendar? Open this page in Safari.';
-    addBtn.parentElement.appendChild(note);
   } else {
-    // Safari (iOS/macOS) + all desktop → ICS Blob flow
+    // Single-button behavior on desktop (and non-iOS): use ICS (works with default calendar apps)
     const icsBlob = makeICS({ title, description, locationText, startLocal });
     const url = URL.createObjectURL(icsBlob);
     addBtn.setAttribute("href", url);
     addBtn.setAttribute("download", `${room.toLowerCase().replace(/\s+/g,'-')}-${todayStr()}.ics`);
-
-    // Desktop convenience: also offer Google Calendar link
-    if (!isIOS) {
-      const alt = document.createElement('a');
-      alt.className = 'tiny';
-      alt.href = gcalUrl;
-      alt.target = '_blank';
-      alt.rel = 'noopener';
-      alt.style.display = 'inline-block';
-      alt.style.marginTop = '6px';
-      alt.textContent = 'Prefer Google Calendar? Click here.';
-      addBtn.parentElement.appendChild(alt);
-    }
   }
 }
 
@@ -602,12 +574,12 @@ function showLockedPaywall({color,venue,theme,areaId}){
 function lockedEffect(el){ el.classList.remove("shake"); void el.offsetWidth; el.classList.add("shake"); if(navigator.vibrate){ try{ navigator.vibrate(80) }catch(e){} } }
 
 /* ===========================
-   Door click handling
+   Door click handling (multi-area aware)
 =========================== */
 async function onDoorClick(color){
   const myColor = getArchetypeColor();
   const theme   = themeForColor(color);
-  const areaId  = pickAreaForColor(color);
+  const areaId  = pickAreaForColor(color);  // choose among user-selected areas
   const venue   = venueFor(areaId, color);
   const today   = todayStr();
 
