--- a/secret-invite.html
+++ b/secret-invite.html
@@ -509,27 +509,47 @@ function showInvitation({color,venue,theme}){
   const locationText = `${venue?.name ?? ""} — ${venue?.address ?? ""}`;
   const addBtn = document.getElementById("addToCalendarBtn");
 
-  // Detect iOS (any browser) vs. everything else
-  const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent);
+  // Robust Safari-on-iOS detection
+  const ua = navigator.userAgent || "";
+  const vendor = navigator.vendor || "";
+  const isIOS = /iPad|iPhone|iPod/.test(ua);
+  const isWebKit = /AppleWebKit/i.test(ua); // all iOS browsers are WebKit, but keep for completeness
+  // Tokens that indicate alternate iOS browsers (NOT Safari)
+  const isAltIOSBrowser = /\b(CriOS|FxiOS|EdgiOS|OPiOS|Brave|DuckDuckGo)\b/i.test(ua);
+  // Real Safari on iOS usually has vendor "Apple Computer, Inc.", includes "Safari", and none of the alt tokens
+  const isSafariIOS =
+    isIOS &&
+    isWebKit &&
+    /Safari/i.test(ua) &&
+    /Apple/i.test(vendor) &&
+    !isAltIOSBrowser;
 
-  // Build Google Calendar URL (works reliably on all iOS browsers and gives notifications)
+  // Build Google Calendar URL (used for non-Safari iOS)
   function two(n){ return String(n).padStart(2,'0'); }
   function gcalDate(d){ return `${d.getFullYear()}${two(d.getMonth()+1)}${two(d.getDate())}T${two(d.getHours())}${two(d.getMinutes())}00`; }
   const endLocal = new Date(startLocal.getTime() + 120*60000);
   const datesParam = `${gcalDate(startLocal)}/${gcalDate(endLocal)}`;
   const gcalUrl = `https://calendar.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&details=${encodeURIComponent(description)}&location=${encodeURIComponent(locationText)}&dates=${datesParam}&ctz=America/New_York`;
 
-  if (isIOS) {
-    // Single-button behavior on iOS: always use Google Calendar link
-    addBtn.setAttribute("href", gcalUrl);
-    addBtn.setAttribute("target", "_blank");
-    addBtn.removeAttribute("download");
-  } else {
-    // Single-button behavior on desktop (and non-iOS): use ICS (works with default calendar apps)
+  if (isSafariIOS) {
+    // iOS Safari → Apple Calendar via ICS
     const icsBlob = makeICS({ title, description, locationText, startLocal });
     const url = URL.createObjectURL(icsBlob);
     addBtn.setAttribute("href", url);
     addBtn.setAttribute("download", `${room.toLowerCase().replace(/\s+/g,'-')}-${todayStr()}.ics`);
+    addBtn.removeAttribute("target");
+  } else if (isIOS) {
+    // iOS non-Safari (Chrome/Brave/Firefox/Edge/DDG/etc.) → Google Calendar
+    addBtn.setAttribute("href", gcalUrl);
+    addBtn.setAttribute("target", "_blank");
+    addBtn.removeAttribute("download");
+  } else {
+    // Desktop & non-iOS → ICS
+    const icsBlob = makeICS({ title, description, locationText, startLocal });
+    const url = URL.createObjectURL(icsBlob);
+    addBtn.setAttribute("href", url);
+    addBtn.setAttribute("download", `${room.toLowerCase().replace(/\s+/g,'-')}-${todayStr()}.ics`);
+    addBtn.removeAttribute("target");
   }
 }
 
