--- a/secret-invite.html
+++ b/secret-invite.html
@@ -211,36 +211,18 @@ const VENUES_BY_AREA = {
 };
 
 /* =========
-   Themes
+   Discreet Dress Code (replaces costume themes)
 =========== */
-const THEMES_BASE = [
-  "Heaven vs. Hell: dress up as an Angel or Devil",
-  "Cats vs. Dogs: wear playful ears, whiskers, or puppy vibes.",
-  "Brain vs. Brawn: dress up as a nerd or jock",
-  "Light vs. Dark: wear either all white or an all black",
-  "Burlesque & Cabaret: wear either corsets, fishnets, feathers, garters, silk gloves, or an outfit with swagger",
-  "Fetish Fantasy: dress up in leather, lace, or latex",
-  "Sexy Uniform: dress up as a nurse, cop, teacher, construction worker, etc.",
-  "Slumber Party Gone Wild: wear either lingerie, pajamas, silk robes, messy bed hair.",
-  "Primal Instincts: wear either leopard, snake, panther, or other primal animal",
-  "Neon Nights: dress up in UV paint, mesh, sheer, bright colors, glow-in-the-dark.",
-  "Mobster & Mob Wife: dress up in either fur coats, cigars, pinstripes, suits",
-  "Goth night: wear black outfit, heavy makeup, straightened hair, etc.",
-  "After Dark at the Office: dress up in a power suit, secretary outfit, or as a boss",
-  "Flasher: wear a trench coat, white t-shirt, short skirt, completely unbuttoned collared shirt",
-  "Vampires and Velvet: dress up in dark velvet, draw on bite marks, blood-red lipstick, or just mysterious vibes",
-  "Magic: dress up as a witch or wizard"
-];
-function dayOfYear(d=new Date()){
-  const start=new Date(d.getFullYear(),0,1);
-  const diff=d - start;
-  return Math.floor(diff/86400000);
-}
+const SIMPLE_DRESS_CODE = {
+  blue:  "Wear something blue",
+  green: "Wear something green",
+  red:   "Wear something red"
+};
 function themeForColor(color){
-  const colorOffset = {blue:0, green:1, red:2}[color] ?? 0;
-  const idx = (dayOfYear() + colorOffset) % THEMES_BASE.length;
-  return THEMES_BASE[idx];
+  // keep function name for compatibility with rest of code
+  return SIMPLE_DRESS_CODE[color] || "Wear something subtle";
 }
+
 const COLOR_CLASS = { blue:"theme-blue", green:"theme-green", red:"theme-red" };
 
 /* ===========================
@@ -481,7 +463,7 @@ function showInvitation({color,venue,theme}){
   const today = new Date();
   const startLabel = venue?.time ?? "7:30 PM";
   const startsText = formatLongDateTime(today, startLabel);
-  const themeLine = theme; // already includes "Title: attire"
+  const themeLine = theme; // discreet dress code text
   const room = roomLabel(color);
 
   // Build content
@@ -492,11 +474,12 @@ function showInvitation({color,venue,theme}){
       <div class="meta">
         <div><strong>Address:</strong> ${venue?.address ?? "TBA"}</div>
         <div><strong>Starts:</strong> ${startsText}</div>
-        <div><strong>Theme:</strong> ${themeLine}</div>
+        <div><strong>Dress code:</strong> ${themeLine}</div>
       </div>
       <div class="buttons">
         <a class="btn" href="${venue?.maps ?? "#"}" target="_blank" rel="noopener">Directions to venue</a>
         <a class="btn primary" id="addToCalendarBtn">Add to calendar</a>
+        <div class="tiny">Tip: keep it subtle—any small blue/green/red accent works.</div>
       </div>
     </div>
   `;
@@ -504,7 +487,7 @@ function showInvitation({color,venue,theme}){
 
   // ===== One-button calendar behavior =====
   const startLocal = parseTimeOnDate(today, startLabel);
-  const title = `${room} • ${theme.split(':')[0]}`;
+  const title = `${room} • ${theme}`;
   const description = themeLine;
   const locationText = `${venue?.name ?? ""} — ${venue?.address ?? ""}`;
   const addBtn = document.getElementById("addToCalendarBtn");
@@ -513,10 +496,8 @@ function showInvitation({color,venue,theme}){
   const ua = navigator.userAgent || "";
   const vendor = navigator.vendor || "";
   const isIOS = /iPad|iPhone|iPod/.test(ua);
-  const isWebKit = /AppleWebKit/i.test(ua); // all iOS browsers are WebKit, but keep for completeness
-  // Tokens that indicate alternate iOS browsers (NOT Safari)
+  const isWebKit = /AppleWebKit/i.test(ua); // all iOS browsers are WebKit
   const isAltIOSBrowser = /\b(CriOS|FxiOS|EdgiOS|OPiOS|Brave|DuckDuckGo)\b/i.test(ua);
-  // Real Safari on iOS usually has vendor "Apple Computer, Inc.", includes "Safari", and none of the alt tokens
   const isSafariIOS =
     isIOS &&
     isWebKit &&
@@ -539,7 +520,7 @@ function showInvitation({color,venue,theme}){
     addBtn.setAttribute("download", `${room.toLowerCase().replace(/\s+/g,'-')}-${todayStr()}.ics`);
     addBtn.removeAttribute("target");
   } else if (isIOS) {
-    // iOS non-Safari (Chrome/Brave/Firefox/Edge/DDG/etc.) → Google Calendar
+    // iOS non-Safari → Google Calendar
     addBtn.setAttribute("href", gcalUrl);
     addBtn.setAttribute("target", "_blank");
     addBtn.removeAttribute("download");
@@ -565,7 +546,7 @@ function showLockedPaywall({color,venue,theme,areaId}){
       <div class="meta">
         <div class="blurred"><strong>Address:</strong> ${venue?.address ?? "Hidden for now"}</div>
         <div><strong>Starts:</strong> ${startsText}</div>
-        <div><strong>Theme:</strong> <span class="blurred">${theme}</span></div>
+        <div><strong>Dress code:</strong> <span class="blurred">${theme}</span></div>
       </div>
       <div class="buttons">
         <a class="btn primary" id="paySingleBtn" href="#">Gain access to the ${color} room tonight for only $2</a>
@@ -598,8 +579,8 @@ function lockedEffect(el){ el.classList.remove("shake"); void el.offsetWidth; el
 =========================== */
 async function onDoorClick(color){
   const myColor = getArchetypeColor();
-  const theme   = themeForColor(color);
-  const areaId  = pickAreaForColor(color);  // choose among user-selected areas
+  const theme   = themeForColor(color);       // now returns "Wear something blue/green/red"
+  const areaId  = pickAreaForColor(color);    // choose among user-selected areas
   const venue   = venueFor(areaId, color);
   const today   = todayStr();
 
