--- a/Business.html
+++ b/Business.html
@@ -142,13 +142,8 @@
       <span class="eyebrow">For Venue Owners & GMs</span>
       <h1>Turn Slow Nights into <span style="color:var(--gold)">Sold-Out Nights</span></h1>
       <p class="sub">
-        The most expensive thing in hospitality is an empty seat. We fill empty seats, keep guests longer, and make visits more fun — so they spend more and come back sooner. When you integrate your business with <strong>Le Libido</strong>, you increase revenue. Guaranteed.
+        The most expensive thing in hospitality is an empty seat. We fill empty seats, keep guests longer, and make visits more fun so they spend more and come back sooner. When you integrate your business with <strong>Le Libido</strong>, you increase revenue. Guaranteed.
       </p>
-      <div class="value-props">
-        <div class="chip">We put asses in empty seats</div>
-        <div class="chip">We keep those asses sat longer</div>
-        <div class="chip">We boost repeat visits with a better experience</div>
-      </div>
     </section>
 
     <!-- Pricing (Stripe) -->
@@ -160,7 +155,7 @@
         <div class="price">$99 <span class="period">/month</span></div>
         <ul class="feat">
           <li>Listed in Le Libido map + color door flow</li>
-          <li>Eligible for prime-day features (Fri/Sat): <strong>10–20%</strong> chance</li>
+          <li>Prime-day feature probability (Fri/Sat): <strong>10–20%</strong> chance</li>
           <li>Standard placement on other days</li>
           <li>Basic insights dashboard</li>
         </ul>
@@ -195,7 +190,7 @@
         <ul class="feat">
           <li>Everything in Scene Maker</li>
           <li><strong>Priority</strong> placement across all days</li>
-          <li>Prime-day features (Fri/Sat): <strong>80–100%</strong> with guaranteed rotation</li>
+          <li>Prime-day features (Fri/Sat): <strong>60–90%</strong> with guaranteed rotation</li>
           <li>Dedicated success support + quarterly playbook</li>
         </ul>
         <a href="#" class="cta"
