--- a/Business.html
+++ b/Business.html
@@ -155,7 +155,7 @@
         <div class="price">$99 <span class="period">/month</span></div>
         <ul class="feat">
           <li>Listed in Le Libido map + color door flow</li>
-          <li>Prime-day feature probability (Fri/Sat): <strong>10–20%</strong> chance</li>
+          <li>Prime-day feature probability (Fri/Sat): <strong>10–20%</strong></li>
           <li>Standard placement on other days</li>
           <li>Basic insights dashboard</li>
         </ul>
