--- a/Business.html
+++ b/Business.html
@@ -155,14 +155,13 @@
         <div class="price">$99 <span class="period">/month</span></div>
         <ul class="feat">
           <li>Listed in Le Libido map + color door flow</li>
-          <li>Prime-day feature probability (Fri/Sat): <strong>10–20%</strong></li>
+          <li>Prime-day feature probability: <strong>10–20%</strong></li>
           <li>Standard placement on other days</li>
           <li>Basic insights dashboard</li>
         </ul>
         <a href="#" class="cta"
            data-price-id="PRICE_ID_STARTER"
            data-tier="starter">Activate Starter</a>
-        <p class="small">Great for building baseline foot traffic.</p>
       </div>
 
       <!-- Decoy (Popular visually but less value / price close to top) -->
@@ -179,7 +178,6 @@
         <a href="#" class="cta"
            data-price-id="PRICE_ID_SCENE"
            data-tier="scene">Upgrade to Scene Maker</a>
-        <p class="small">Decoy pricing calibrated to make Hotspot irresistible.</p>
       </div>
 
       <!-- Top -->
@@ -196,7 +194,6 @@
         <a href="#" class="cta"
            data-price-id="PRICE_ID_HOTSPOT"
            data-tier="hotspot">Make Us Your Hotspot</a>
-        <p class="small">Own Fridays & Saturdays with premium positioning.</p>
       </div>
     </section>
 
