--- a/Business.html
+++ b/Business.html
@@ -83,7 +83,7 @@
       <p class="sub">
         The most expensive thing in hospitality is an empty seat. We fill empty seats, keep guests longer, and make visits more fun so they spend more and come back sooner. When you integrate your business with <strong>Le Libido</strong>, you increase revenue. Guaranteed.
       </p>
-      <div class="scarcity">Only <strong>12</strong> openings remaining.</div>
+      <div class="scarcity">Only<strong>12</strong>openings remaining.</div>
     </section>
 
     <!-- Billing toggle -->
@@ -92,7 +92,7 @@
         <button id="billMonthly" class="active" aria-selected="true">Monthly</button>
         <button id="billAnnual" aria-selected="false">Annual</button>
       </div>
-      <span class="save">Annual: save ~2 months</span>
+      <span class="save">Annual: save 2 months</span>
     </div>
 
     <!-- Pricing (Stripe Payment Links) -->
@@ -100,25 +100,24 @@
       <!-- Starter -->
       <div class="plan" data-plan="starter">
         <span class="tag">Entry</span>
-        <h3>Social Starter</h3>
+        <h3>Listed Venue</h3>
         <div class="price"><span class="amt" data-monthly="$99" data-annual="$999">$99</span> <span class="period">/<span class="unit">month</span></span></div>
         <ul class="feat">
-          <li>Listed in Le Libido map + color door flow</li>
+          <li>Become a listed venue</li>
           <li>Prime-day feature probability: <strong>10–20%</strong></li>
           <li>Standard placement on other days</li>
-          <li>Basic insights dashboard</li>
         </ul>
         <a class="cta paylink"
            data-tier="starter"
            data-link-monthly="https://buy.stripe.com/STARTER_MONTHLY"
            data-link-annual="https://buy.stripe.com/STARTER_ANNUAL"
-           href="#">Activate Starter</a>
+           href="#">Subscribe to join the party</a>
       </div>
 
       <!-- Middle (decoy) -->
       <div class="plan popular" data-plan="scene">
         <span class="tag">Most Chosen</span>
-        <h3>Scene Maker</h3>
+        <h3>Featured Venue</h3>
         <div class="price"><span class="amt" data-monthly="$499" data-annual="$4,999">$499</span> <span class="period">/<span class="unit">month</span></span></div>
         <ul class="feat">
           <li>All Starter benefits</li>
@@ -130,13 +129,13 @@
            data-tier="scene"
            data-link-monthly="https://buy.stripe.com/SCENE_MONTHLY"
            data-link-annual="https://buy.stripe.com/SCENE_ANNUAL"
-           href="#">Upgrade to Scene Maker</a>
+           href="#">Boost your venue’s visibility</a>
       </div>
 
       <!-- Top -->
       <div class="plan" data-plan="hotspot">
         <span class="tag">Premium</span>
-        <h3>Hotspot</h3>
+        <h3>Spotlighted Venue</h3>
         <div class="price"><span class="amt" data-monthly="$899" data-annual="$8,999">$899</span> <span class="period">/<span class="unit">month</span></span></div>
         <ul class="feat">
           <li>Everything in Scene Maker</li>
@@ -148,7 +147,7 @@
            data-tier="hotspot"
            data-link-monthly="https://buy.stripe.com/HOTSPOT_MONTHLY"
            data-link-annual="https://buy.stripe.com/HOTSPOT_ANNUAL"
-           href="#">Make your venue a Hotspot</a>
+           href="#">Stand above the rest</a>
       </div>
     </section>
 
@@ -216,10 +215,8 @@
 
         <div style="grid-column:1/-1; display:flex; gap:10px; flex-wrap:wrap; align-items:center">
           <button class="cta" id="mailtoBtn" type="button">Send to Le Libido</button>
-          <span class="small">We’ll place you according to your tier & this month’s curation (max 12 per Area).</span>
         </div>
       </form>
-
 
     <!-- Cancellation policy (email-only; email hidden) -->
     <section class="section">
